fix: add gap between buttons in VisitsPage pageHeader

--- a/src/pages/visits/VisitsPage.module.scss
+++ b/src/pages/visits/VisitsPage.module.scss
@@ -267,5 +267,6 @@
 .pageHeader {
   display: flex;
   justify-content: flex-end;
+  gap: $space-2;
   margin-bottom: $space-3;
 }
